--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "@imnd/ajax",
-  "version": "1.0.0",
-  "description": "ajax tools",
+  "type": "module",
+  "name": "imnd-ajax",
+  "description": "JS library for working with ajax",
   "main": "ajax.js",
+  "version": "1.0.1",
   "scripts": {
-    "build": "webpack --mode=production"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.5",
-    "@babel/preset-env": "^7.20.2",
-    "babel-loader": "^9.1.0",
-    "webpack-cli": "^5.1.4"
+    "vite": "^4.4.5"
   },
   "repository": {
     "type": "git",
